Fixed margin and padding of sections, changed z-index of form

--- a/src/styles/Features.css
+++ b/src/styles/Features.css
@@ -1,8 +1,12 @@
+.features {
+    padding: 2rem 6rem;
+}
+
 .features__content {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 1rem 2rem 0rem 2rem;
+    margin: 1rem 2rem;
     padding: 1rem;
 }
 
@@ -28,7 +32,14 @@
     border-radius: 0.8rem;
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 1200px) {
+    .features {
+        padding: 1rem 2rem;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+
     .features__content {
         flex-direction: column;
         gap: 3rem;
