--- a/src/styles/Pricing.css
+++ b/src/styles/Pricing.css
@@ -1,8 +1,12 @@
+.pricing {
+    padding: 2rem 6rem;
+}
+
 .pricing__content {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 1rem 2rem 0rem 2rem;
+    margin: 1rem 2rem;
     padding: 1rem;
 }
 
